# metodos-tp1

./: .gitignore
pagerank/: CMakeLists(Backup).txt  CMakeLists.txt  Untitled.ipynb  testsIdeas.txt
pagerank/datasets/: test_5x5.txt
pagerank/main/: Gauss.cpp  Gauss.h  main.cpp
pagerank/main/model/: COOMatrix.cpp  COOMatrix.h  CSCMatrix.cpp  CSCMatrix.h  CSRMatrix.cpp  CSRMatrix.h  DOKMatrix.cpp  DOKMatrix.h  Gauss.cpp  Gauss.h  LILMatrix.cpp  LILMatrix.h  Metnum.cpp  Metnum.h  metnum.cpp  metnum.h
pagerank/test/: CSRMatrix_tests.cpp  DOKMatrix_tests.cpp  LILMatrix_tests.cpp  Metnum_tests.cpp
pagerank/test/google-test/src/: gtest-death-test.cc  gtest-internal-inl.h  gtest-port.cc  gtest.cc
